# spear-viewer-supplementary-material

./: .gitignore  README.md
Results/: README.md  measurements_evaluation.ods  questionnaire_evaluation.ods
Results/raw_data/#182/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#239/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#336/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#381/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#461/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#485/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#511/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#616/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#783/: protocol.md  recording_protocol.md  result.csv
Results/raw_data/#812/: protocol.md  recording_protocol.md  result.csv
Scripts/: README.md  parser.py  runner.py
Software/: README.md  spear-viewer-0.0.3.vsix
Study/: README.md  messungen_auswertung.ods  protocol_template.md  questionnaire_evaluation.ods  recording_protocol_template.md
Study/Code/task_1/: CMakeLists.txt  builder.sh  main.cpp  spear.yml
Study/Code/task_6/: CMakeLists.txt  README.md  builder.sh  main.cpp  spear.yml
Study/Code/task_6/include/: Camera.cpp  Camera.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  color.cpp  color.h  hitable.h  hitable_list.cpp  hitable_list.h  interval.cpp  interval.h  util.h  vec3.cpp  vec3.h
System/: README.md  machine_specs.json  profile.json
(+29 files in other folders)
